--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ packages = [{include = "logpy", from = "src"}]
 [tool.poetry.dependencies]
 python = ">=3.9"
 invoke = "^1.7.0"
+aiohttp = "^3.8.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
