--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ setup = "tasks:setup"
 publish = "tasks:publish"
 
 [tool.pytest.ini_options]
+addopts = "-v"
 asyncio_mode = "auto"
 
 [tool.setuptools.packages.find]
