--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,22 +3,33 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
-name = "logpy"
+name = "log78"
 version = "0.1.1"
-description = "logpy"
-authors = ["frieda <www778878net@189.cn>"]
-readme = "README.md"
+description = "A flexible Python logging library supporting console, file, and server logging."
+authors = ["Frieda.Hu <www778878net@189.cn>"]
 license = "Apache-2.0"
-homepage = "https://github.com/www778878net/LogPy"
-documentation = "https://github.com/www778878net/LogPy"
-packages = [{include = "logpy", from = "src"}]
+readme = "README.md"
+homepage = "https://github.com/www778878net/Log78"
+repository = "https://github.com/www778878net/Log78.git"
+documentation = "https://github.com/www778878net/Log78"
+keywords = ["logging", "debug", "development"]
+classifiers = [
+    "License :: OSI Approved :: Apache Software License",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+]
 
 [tool.poetry.dependencies]
-python = ">=3.9"
-invoke = "^1.7.0"
+python = "^3.9"
+aiofiles = "^0.6.0"
+aiohttp = "^3.7.4"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2.5"
+pytest = "^7.0.0"  # 更新到最新的主要版本
+pytest-asyncio = "^0.18.3"
+black = "^22.3.0"
+docutils = "^0.21.2"
+invoke = "^1.7.0"  # 添加 invoke 依赖
 
 [tool.poetry.scripts]
 build = "tasks:build"
@@ -28,14 +39,17 @@ all = "tasks:run_all"
 setup = "tasks:setup"
 publish = "tasks:publish"
 
-[tool.poetry.group.dev.dependencies]
-docutils = "^0.21.2"
-
 [tool.pytest.ini_options]
-testpaths = ["tests"]
+addopts = "-v"
+asyncio_mode = "auto"
 
-#poetry install
-#poetry run setup
-#poetry run all
-#poetry publish --build
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["log78*"]
+exclude = ["tests*"]
+
+[[tool.poetry.source]]
+name = "aliyun"
+url = "https://mirrors.aliyun.com/pypi/simple/"
+priority = "primary"
 
