--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "log78"
-version = "0.1.8"
+version = "0.1.10"
 description = "A flexible Python logging library supporting console, file, and server logging."
 authors = ["Frieda.Hu <www778878net@189.cn>"]
 license = "Apache-2.0"
@@ -23,6 +23,7 @@ classifiers = [
 python = "^3.9"
 aiofiles = "^0.6.0"
 aiohttp = "^3.7.4"
+loguru = "^0.7.0"  # 添加这一行
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.0"  # 更新到最新的主要版本
