--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ python = "^3.9"
 aiofiles = "^0.6.0"
 aiohttp = "^3.7.4"
 loguru = "^0.7.0"  # 添加这一行
+aiokafka = "^0.12.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.0"  # 更新到最新的主要版本
